--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -1,9 +1,16 @@
+@import "variables.less";
+
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   background-color: #FFFFFF;
+  height: 100%;
+  font-family: 'Merriweather Sans', sans-serif;
 
-  .navigation {
-    width: 200px;
-    height: 100%;
-    background-color: #202020;
+  h1 {
+    font-family: 'Yeseva One', serif;
   }
 }
