--- a/public/stylesheets/piggy.less
+++ b/public/stylesheets/piggy.less
@@ -1,7 +1,16 @@
 @import "variables.less";
 
 .piggy {
-  box-shadow: 1px 1px 1px 1px @gunmetal;
-  width: @piggyWidth;
-  height: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  #pig-wrapper {
+    width: 100%;
+    text-align: center;
+    img {
+      width: 100px;
+      height: auto;
+    }
+  }
+
 }
