transaction table stuff + add new files

--- a/public/stylesheets/transactionTable.less
+++ b/public/stylesheets/transactionTable.less
@@ -10,6 +10,10 @@
   .input-row {
     padding: 5px;
 
+    .add-button {
+      margin: 5px;
+    }
+
     .year-input {
       width: 55px;
       margin-right: 2px;
@@ -26,7 +30,6 @@
 
     input {
       padding: 8px;
-
     }
   }
 }
