--- a/public/stylesheets/variables.less
+++ b/public/stylesheets/variables.less
@@ -4,6 +4,8 @@
 @cerulean: #577DDB;
 @platinum: #E5E5E5;
 
+@negative: #DB2828;
+
 @gradient0: @lavender;
 @gradient1: #9C85E7;
 @gradient2: #8582E3;
