--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -8,11 +8,16 @@ html {
 body {
   background-color: #FFFFFF;
   height: 100%;
-  font-family: 'Merriweather Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   overflow-x: scroll;
 
     h1 {
       font-family: 'Yeseva One', serif;
+    }
+
+    h2 {
+      font-weight: bold;
+      font-size: 1.2em;
     }
 
     .top-bar {
