--- a/public/stylesheets/transactionTable.less
+++ b/public/stylesheets/transactionTable.less
@@ -7,12 +7,12 @@
     padding: 6px 10px;
   } 
 
-  .delete-button {
+  .delete-button.ui.basic.button {
     border-width: 0;
-    box-shadow: none !important;
+    box-shadow: none;
   }
 
-  .delete-button:hover {
+  tr td .delete-button:hover.ui.basic.button:hover {
     color: @negative !important;
   }
 
