--- a/public/stylesheets/piggy.less
+++ b/public/stylesheets/piggy.less
@@ -7,6 +7,7 @@
   #pig-wrapper {
     width: 100%;
     text-align: center;
+    padding: 20px;
     img {
       width: 100px;
       height: auto;
