display all the category totals except balance

--- a/public/stylesheets/piggy.less
+++ b/public/stylesheets/piggy.less
@@ -14,4 +14,16 @@
     }
   }
 
+  .amount-bar {
+    border: 1px solid grey;
+    height: 10px;
+    background-color: grey;
+    margin-top: 10px;
+  }
+
+  .totals-user {
+    text-transform: capitalize;
+    margin-top: 15px;
+  }
+
 }
