--- a/public/stylesheets/transactionTable.less
+++ b/public/stylesheets/transactionTable.less
@@ -11,7 +11,7 @@
 
   .add-button, .delete-button {
     padding: 6px 10px;
-  } 
+  }
 
   .delete-button.ui.basic.button {
     border-width: 0;
@@ -40,10 +40,11 @@
     }
 
     .day-input {
-      width: 40px; 
+      width: 40px;
     }
 
     .amount-input {
+      text-align: right;
       width: 90px;
     }
 
@@ -77,6 +78,6 @@
   }
 
   .shared {
-    color: @gunmetal; 
+    color: @gunmetal;
   }
 }
