add styling for login

--- a/public/stylesheets/nav.less
+++ b/public/stylesheets/nav.less
@@ -3,6 +3,22 @@
 .nav {
   padding-top: 100px;
   
+  .login {
+    margin-top: 300px;
+    padding: 0px 30px;
+
+    .input.email,
+    .input.password {
+      width: 100%;
+      padding: 10px 0px;
+    }
+
+    .add-button {
+      margin-top: 10px;
+      float: right;
+    }
+  }
+
 
   .nav-link {
     width: 100%;
