can edit transactions

--- a/public/stylesheets/transactionTable.less
+++ b/public/stylesheets/transactionTable.less
@@ -18,11 +18,15 @@
     box-shadow: none;
   }
 
+  tr:hover {
+    background-color: #cccccc;
+  }
+
   tr td .delete-button:hover.ui.basic.button:hover {
     color: @negative !important;
   }
 
-  .input-row {
+  .transaction-row {
     padding: 5px;
 
     .add-button {
